# guizero

./: .gitignore  .pypirc  .travis.yml  404.html  App.py  ButtonGroup.py  CheckBox.py  LICENCE  README  README.md  TextBox.py  ZeroButton.py  __init__.py  changelog.md  colour_example.md  general_example.md  index.html  license.txt  make_deb  make_deb_instructions  mkdocs.yml  pyproject.toml  readme.rst  requirements.txt  setup.py  utilities.py
about/: index.html
app/: index.html
book/: index.html
box/: index.html
buttongroup/: index.html
changelog/: index.html
checkbox/: index.html
colors/: index.html
combo/: index.html
commands/: index.html
contributing/: index.html
css/: base.css
debian_jessie/: changelog  control  copyright  rules
debian_stretch/: changelog  control  rules
deployment/: index.html
development/: index.html
docs/: 404.html  about.md  alerts.md  app.md  book.md  box.md  buttongroup.md  changelog.md  checkbox.md  combo.md  commands.md  contributing.md  deployment.md  development.md  drawing.md  events.md  extra.css  images.md  index.html  listbox.md  picture.md  pushbutton.md  search.html  sitemap.xml  size.md  slider.md  text.md  textbox.md  titlebox.md  usingtk.md  waffle.md  window.md
docs-src/: about.md  alerts.md  app.md  blocking.md  box.md  buttongroup.md  checkbox.md  combo.md  howto.md  index.md  layout.md  mkdocs.yml  picture.md  pushbutton.md  slider.md  start.md  text.md  textbox.md  waffle.md
drawing/: index.html
events/: index.html
examples/: SenseHAT Environment Sensors  after_repeat.py  alert.py  box.py  (+79 more)
(+183 files in other folders)
