[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "guizero"
version = "1.5.1"
authors = [
    {name = "Laura Sach", email = "laura.sach@raspberrypi.org"},
    {name= "Martin O'Hanlon", email = ""}
]
description = "Python module to allow learners to easily create GUIs"
readme = "README.md"
requires-python = ">=3"
keywords = ["GUI", "guizero", "interface",]
license = {text = "BSD-3-Clause"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Topic :: Education",
    "Topic :: Software Development :: User Interfaces",
    "Topic :: Education",
    "Intended Audience :: Education",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]


[project.optional-dependencies]
images =  ["pillow>=4.3.0"]

[project.urls]
Repository = "https://github.com/lawsie/guizero"
Documentation = "https://lawsie.github.io/guizero/"